Added possibility to add markers to CSV files like GPR (#108)
* Added possibility to add markers to CSV files like GPR

* Fix NMEACoordinates test